# agent-research

./: .gitignore  README.md
seri-26/: CMakeLists.txt  README.md
seri-26/include/seri/: seri.hpp
seri-26/tests/: serializer_tests.cpp
tbot/: README.md  pyproject.toml
tbot/scripts/: install_deps.sh
tbot/src/tbot/: __init__.py  bot.py  config.py  llm_client.py  logic.py  main.py  memory.py
tbot/tests/: test_config.py  test_logic.py  test_memory.py
