[project]
name = "tbot"
version = "0.1.0"
description = "LLM-driven Telegram persona bot"
authors = [{name = "Agent"}]
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[async]>=20.6",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
